<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_view"
        android:title="@string/action_view_details" />
    <item
        android:id="@+id/action_set_not_started"
        android:title="@string/status_not_started" />
    <item
        android:id="@+id/action_set_in_progress"
        android:title="@string/status_in_progress" />
    <item
        android:id="@+id/action_set_done"
        android:title="@string/status_done" />
    <item
        android:id="@+id/action_toggle_complete"
        android:title="@string/group_task_mark_complete" />
    <item
        android:id="@+id/action_edit"
        android:title="@string/edit_task" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/delete_task" />
</menu>
